@@ -1,3 +1,10 @@
+2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* EditorWindow.cs: Minor changes.
+	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Changed
+	  named from statusbar1 to status_bar and added a ProgressBar named
+	  progress_bar
+
 2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
